--- a/src/templates/course_page.html
+++ b/src/templates/course_page.html
@@ -48,7 +48,7 @@
                         </button>
                         <a class="navbar-brand" href="./">BS3 Side Navbar</a>
                     </div>
-                    <div class="collapse navbar-collapse">
+                    <div class="collapse navbar-collapse" style="margin-top: 50px;">
                         <ul class="nav navbar-nav">
                             <li class="">
                                 <a href="#home" id="home-tab" role="tab" data-toggle="tab" aria-controls="home"
@@ -57,6 +57,22 @@
                             <li class="">
                                 <a href="#profile" id="profile-tab" role="tab" data-toggle="tab" aria-controls="profile"
                                    aria-expanded="true">Right (Inverse Theme)</a>
+                            </li>
+                            <li class="">
+                                <a href="#collapseListGroup1"
+                                   data-toggle="collapse">
+                                    Collapsible list group
+                                </a>
+                                <div class="panel-collapse collapse" id="collapseListGroup1">
+                                    <div class="collapse navbar-collapse">
+                                        <ul class="nav navbar-nav">
+                                            <li class=""><a href="#lalka" id="lalka-tab" role="tab"
+                                                            data-toggle="tab" aria-controls="lalka"
+                                                            aria-expanded="true">Who's lalka?</a>
+                                            </li>
+                                        </ul>
+                                    </div>
+                                </div>
                             </li>
 
                             <!-- WE DON'T NEED THIS!
@@ -81,28 +97,6 @@
 
                             <!-- Не баг, а фича. Из-за того, что текст не идёт в центр, такие менюшки спускаем вниз.
                             Это открывающиеся менюшки с выбором содержания. -->
-                            <div class="panel-group" role="tablist">
-                                <div class="panel panel-default">
-                                    <div class="panel-heading" role="tab" id="collapseListGroupHeading1">
-                                        <li>
-                                            <h6 class="panel-title">
-                                                <button class="btn-link" href="#collapseListGroup1"
-                                                        data-toggle="collapse">
-                                                    Collapsible list group
-                                                </button>
-                                            </h6>
-                                        </li>
-                                    </div>
-                                    <div class="panel-collapse collapse" id="collapseListGroup1">
-                                        <ul class="list-group">
-                                            <li class="panel-footer text-muted"><a href="#lalka" id="lalka-tab" role="tab" data-toggle="tab" aria-controls="lalka"
-                                   aria-expanded="true">Who's lalka?</a></li>
-                                            <li class="list-group-item">One itmus ac facilin</li>
-                                            <li class="list-group-item">Second eros</li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div>
 
                         </ul>
                         <p class="navbar-text">
@@ -115,6 +109,12 @@
         </div>
 
         <div class="col-sm-9 col-lg-10" style="margin-top: 80px;">
+
+            <!--
+
+            СЮДА ФИЛЬТРЫ ДЛЯ ПОИСКА ПИХНУТЬ НАДО!
+
+            -->
 
             <!-- Блок для ывода контента -->
             <div id="myTabContent" class="tab-content">
