add ajax, add new views, small fixes

--- a/src/templates/course_page.html
+++ b/src/templates/course_page.html
@@ -50,6 +50,14 @@
                     </div>
                     <div class="collapse navbar-collapse" style="margin-top: 50px;">
                         <ul class="nav navbar-nav">
+                            <li class="discussions">
+                                <a href="#discussions" id="discussions-tab" role="tab" data-toggle="tab" aria-controls="discussions"
+                                   aria-expanded="false">Discussions</a>
+                            </li>
+                            <li class="">
+                                <a href="#home" id="home-tab" role="tab" data-toggle="tab" aria-controls="home"
+                                   aria-expanded="false">Left (Default Theme)</a>
+                            </li>
                             <li class="">
                                 <a href="#home" id="home-tab" role="tab" data-toggle="tab" aria-controls="home"
                                    aria-expanded="false">Left (Default Theme)</a>
