--- a/src/discussions/templates/discussions/news_ajax_list.html
+++ b/src/discussions/templates/discussions/news_ajax_list.html
@@ -1,7 +1,4 @@
-
-<h2>Latest news </h2>
-
-{% for news in latest_newslist %}
+{% for news in latest_news_list %}
 
     <div class="news">
         <h1>{{ news.title }}</h1>
