--- a/src/core/templates/core/registration/login.html
+++ b/src/core/templates/core/registration/login.html
@@ -1,4 +1,4 @@
-{% extends 'core/base.html' %}
+{% extends 'base.html' %}
 {% load staticfiles %}
 {% load widget_tweaks  %}
 {% block head %} <link rel="stylesheet" href="{% static 'signin.css' %} "> {% endblock %}
