--- a/src/discussions/templates/discussions/detail.html
+++ b/src/discussions/templates/discussions/detail.html
@@ -2,64 +2,67 @@
 
 {% block title %} {{ post.title }} {% endblock %}
 {% block header %} {{ post.title }} {% endblock %}
+
 {% block content %}
 
-    <h2>{{ post.title }}</h2>
-    <p>{{ post.content }}</p>
-    {{ post.created_at }} | by <a target="_blank" href="/users/{{ post.user.id }}/">{{ post.user }} </a> | rating:
-    {{ post.score }} | <a target="_blank" href="{% url 'posts:detail' post.id %}">comments</a> |
-    {% if user == post.user %} <a href="{% url 'posts:edit' post.id %}">Edit</a>  {% endif %}
+        <h2>{{ post.title }}</h2>
+        <p>{{ post.content }}</p>
+        {{ post.created_at }} | by <a target="_blank" href="/users/{{ post.user.id }}/">{{ post.user }} </a> | rating:
+        {{ post.score }} | <a target="_blank" href="{% url 'posts:detail' post.id %}">comments</a> |
+        {% if user == post.user %} <a href="{% url 'posts:edit' post.id %}">Edit</a>  {% endif %}
 
-    <h5>{{ post.comments_count }} comments:</h5>
-    {% if post.post_comments.all %}
-{#        <ul>#}
-{#            {% for comment in post.comments.all %}#}
-{#                <div class="center-block">#}
-{#                    <li>{{ comment.content }}</li>#}
-{#                    <p>#}
-{#                        by {{ comment.user }} at {{ comment.created_at }}#}
-{#                        {% if comment.user == user %}#}
-{#                            <a href="{% url "comments:edit" pk=comment.id %}">Edit</a>#}
-{#                        {% endif %}#}
-{#                    </p>#}
-{##}
-{#                </div>#}
-{#            {% endfor %}#}
-{#        </ul>#}
-        {% for comment in post.comments.all %}
-         <div class="row">
+        <h5>{{ post.comments_count }} comments:</h5>
+        {% if post.post_comments.all %}
+            {#        <ul>#}
+            {#            {% for comment in post.comments.all %}#}
+            {#                <div class="center-block">#}
+            {#                    <li>{{ comment.content }}</li>#}
+            {#                    <p>#}
+            {#                        by {{ comment.user }} at {{ comment.created_at }}#}
+            {#                        {% if comment.user == user %}#}
+            {#                            <a href="{% url "comments:edit" pk=comment.id %}">Edit</a>#}
+            {#                        {% endif %}#}
+            {#                    </p>#}
+            {##}
+            {#                </div>#}
+            {#            {% endfor %}#}
+            {#        </ul>#}
+            {% for comment in post.comments.all %}
+                <div class="row">
                 <div class="col-sm-5">
                     <div class="panel panel-default">
                         <div class="panel-heading">
-                            <strong>{{ comment.user }} </strong> <span class="text-muted">commented {{ comment.created_at }}</span>
-                        <div class="panel-body">
-                            {{ comment.text }}
+                            <strong>{{ comment.user }} </strong> <span
+                                class="text-muted">commented {{ comment.created_at }}</span>
+                            <div class="panel-body">
+                                {{ comment.text }}
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        {% endfor %}
-    {% else %}
-        <p>No comments are available.</p>
-    {% endif %}
-
-    {% if user.is_anonymous %}
-        <h5>You must be logged in in order to add comments!</h5>
-        <a href="{% url "core:login" %}?next={{request.path}}">Log in</a>
-    {% else %}
-    <form method="post">
-        {% csrf_token %}
-        <div>
-            {{ form.comment }}
-
-            {% for error in form.comment.errors %}
-                <div><b>{{ error }}</b></div>
             {% endfor %}
-        </div>
-        <div>
-            <input type="submit" value="Send comment">
-        </div>
-    </form>
-    {% endif %}
+        {% else %}
+            <p>No comments are available.</p>
+        {% endif %}
 
+        {% if user.is_anonymous %}
+            <h5>You must be logged in in order to add comments!</h5>
+            <a href="{% url "core:login" %}?next={{ request.path }}">Log in</a>
+        {% else %}
+            <form method="post">
+                {% csrf_token %}
+                <div>
+                    {{ form.comment }}
+
+                    {% for error in form.comment.errors %}
+                        <div><b>{{ error }}</b></div>
+                    {% endfor %}
+                </div>
+                <div>
+                    <input type="submit" value="Send comment">
+                </div>
+            </form>
+        {% endif %}
+        </div>
+</div>
 {% endblock %}
