--- a/src/core/templates/base.html
+++ b/src/core/templates/base.html
@@ -20,11 +20,11 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">PhystechEdu</a>
+            <a class="navbar-brand" href="/">PhystechEdu</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">Новости</a></li>
+                <li><a href="{% url 'core:mipt_news'%}">Новости</a></li>
                 {% if user.is_authenticated %}
                     <li><a href="#">Профиль</a></li>
                     <li><a href="{% url 'core:logout' %}">Выйти</a></li>
