--- a/src/core/templates/base.html
+++ b/src/core/templates/base.html
@@ -26,7 +26,7 @@
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="{% url 'core:mipt_news'%}">Новости</a></li>
                 {% if user.is_authenticated %}
-                    <li><a href="#">Профиль</a></li>
+                    <li><a href="{% url 'core:user' slug=user.username %}">Профиль</a></li>
                     <li><a href="{% url 'core:logout' %}">Выйти</a></li>
                 {% else %}
                     <li><a href="{% url 'core:login' %}">Войти</a></li>
