--- a/src/courses/templates/courses/courses.html
+++ b/src/courses/templates/courses/courses.html
@@ -3,5 +3,9 @@
 {% block content %}
     {% for course in courses %}
         <h2><a href="{% url 'courses:course_page' chair_slug=course.chair.slug course_slug=course.slug %}">{{ course.title }}</a></h2>
+        <input type="button" id="like" name="{{ company_slug }}" value="Like" />
+
     {% endfor %}
 {% endblock %}
+
+
