--- a/src/docs/templates/docs/docs.html
+++ b/src/docs/templates/docs/docs.html
@@ -1,19 +1,23 @@
 {% extends "base.html" %}
 
-{% block title %} {{ current_post.title }} {% endblock %}
+{% block title %} {{ doc.title }} {% endblock %}
 {% block content %}
 <div style="padding: 60px">
-    <h2>{{ current_post.title }}</h2>
-    <p>{{ current_post.content }}</p>
-    {{ current_post.created_at }} | by
-    <a target="_blank" href="{% url 'core:user' slug=current_post.author.username %}">{{ current_post.user }} </a> | rating:
-    {{ current_post.score }}
-    {#    {% if user == post.user %} <a href="{% url 'posts:edit' post.id %}">Edit</a>  {% endif %}#}
+    <h2>{{ doc.title }}</h2>
+    <p>{{ doc.description }}</p>
+    <a href="{{ doc.file.url }}"> <button class="btn btn-success" form="user_edit_form" ">
+                            <i class="fa fa-download" aria-hidden="true"></i>
+                            <span class="bigger-110">Download</span>
+                        </button> </a> <br>
+    {{ doc.created_at }} | by
+    <a target="_blank" href="{% url 'core:user' slug=doc.author %}">{{ doc.author }} </a> | rating:
+    {{ doc.score }}
+        {% if user == post.user %} <a href="{% url 'posts:edit' post.id %}">Edit</a>  {% endif %}
 
-    <h5>{{ current_post.comments.count }} comments:</h5>
-    {% if current_post.comments.all %}
+    <h5>{{ doc.comments.count }} comments:</h5>
+    {% if doc.comments.all %}
 
-        {% for comment in current_post.comments.all %}
+        {% for comment in doc.comments.all %}
             <div class="center-block">
             <div class="row">
                 <div class="col-sm-5" style="width:500px">
