--- a/src/core/templates/base.html
+++ b/src/core/templates/base.html
@@ -36,8 +36,8 @@
 
                 <li><a href="#">Информация</a></li>
             </ul>
-            <form class="navbar-form navbar-right">
-                <input type="text" class="form-control" placeholder="Search...">
+            <form class="navbar-form navbar-right" action="/search">
+                <input type="text" name="q" class="form-control" placeholder="Search...">
             </form>
         </div>
     </div>
