ajax docs views

--- a/src/courses/templates/courses/course_page.html
+++ b/src/courses/templates/courses/course_page.html
@@ -101,7 +101,7 @@
         });
 
         $('.documents').click(function () {
-            $('#content').load('{% url 'discussions:discussions_ajax' chair_slug=chair.slug course_slug=course.slug %}');
+            $('#content').load('{% url 'docs:docs_ajax' chair_slug=chair.slug course_slug=course.slug %}');
         });
 
         $('.course-news').click(function () {
