--- a/src/core/templates/core/home.html
+++ b/src/core/templates/core/home.html
@@ -1,12 +1,28 @@
 {% extends "base.html" %}
 
+{% load staticfiles %}
+
+{% block head %}
+<link href="{% static 'bootstrap/css/jumbotron-narrow.css' %}" rel="stylesheet">
+{% endblock %}
+
 {% block content %}
     <div class="jumbotron">
+        <h1 style="margin-left: 50px;">Departments</h1>
+        </div>
         <div class="container">
-            <div class="row equal">
+            <div class="row equal" data-toggle="buttons-radio">
                 {% for chair in chairs %}
-                <div class="col-xs-6 col-md-3">
-                    <a href="{% url 'core:courses' chair.slug %}" class="thumbnail">
+                <div class="col-md-4">
+                    <a href="{% url 'core:courses' chair.slug %}" class="btn btn-default btn-block">
+                        <h2>{{ chair.title }}</h2>
+{#                        <img src="image/mipt.png" data-src="holder.js/100%x180" alt="...">#}
+                    </a>
+                </div>
+                {% endfor %}
+                {% for chair in chairs %}
+                <div class="col-md-4">
+                    <a href="{% url 'core:courses' chair.slug %}" class="btn btn-default btn-block" type="button">
                         <h2>{{ chair.title }}</h2>
 {#                        <img src="image/mipt.png" data-src="holder.js/100%x180" alt="...">#}
                     </a>
@@ -14,6 +30,5 @@
                 {% endfor %}
             </div>
         </div>
-    </div>
 
 {% endblock %}
