--- a/src/core/templates/core/courses.html
+++ b/src/core/templates/core/courses.html
@@ -1,16 +1,26 @@
 {% extends "base.html" %}
 
-{% block content %}
-    <div class="jumbotron">
-        <div class="container">
-            <div class="row equal">
-                {% for course in courses %}
-                    <h2>
-                        <a href="{% url 'courses:course_page' chair_slug=course.chair.slug course_slug=course.slug %}">{{ course.title }}</a>
-                    </h2>
-                {% endfor %}
+{% load staticfiles %}
 
-            </div>
+{% block head %}
+<link href="{% static 'bootstrap/css/jumbotron-narrow.css' %}" rel="stylesheet">
+{% endblock %}
+
+{% block content %}
+<div class="jumbotron">
+    <h1 style="margin-left: 50px;">Курсы кафедры {{courses.first.chair.title}}</h1>
+</div>
+<div class="container">
+    <div class="row equal" data-toggle="buttons-radio">
+        {% for course in courses %}
+        <div class="col-md-4">
+            <a href="{% url 'courses:course_page' chair_slug=course.chair.slug course_slug=course.slug %}"
+               class="btn btn-default btn-block">
+                <h2>{{ course.title }}</h2>
+            </a>
         </div>
+        {% endfor %}
+
     </div>
+</div>
 {% endblock %}
