--- a/src/courses/templates/courses/course_page.html
+++ b/src/courses/templates/courses/course_page.html
@@ -104,6 +104,10 @@
             $('#content').load('{% url 'docs:docs_ajax' chair_slug=chair.slug course_slug=course.slug %}');
         });
 
+         $('.guides').click(function () {
+            $('#content').load('{% url 'core:guides' %}');
+        });
+
         $('.course-news').click(function () {
             $('#content').load('{% url 'discussions:discussions_ajax_news' chair_slug=chair.slug course_slug=course.slug %}');
         });
