--- a/src/core/templates/base.html
+++ b/src/core/templates/base.html
@@ -2,12 +2,12 @@
 
 <html>
 <head>
-    {% block title %}<title>lol</title> {% endblock %}
+    <title>{% block title %}{% endblock %}</title>
     <link href="{% static 'bootstrap/css/bootstrap.css' %}" rel="stylesheet">
     <link href="{% static 'bootstrap/navbar-fixed-side.css' %}" rel="stylesheet">
     {% block head %} {% endblock %}
 </head>
-<body>
+<body style="padding-top: 25px">
 
 
 <nav class="navbar navbar-inverse navbar-fixed-top">
