--- a/src/core/templates/core/home.html
+++ b/src/core/templates/core/home.html
@@ -3,7 +3,7 @@
 {% load staticfiles %}
 
 {% block head %}
-<link href="{% static 'bootstrap/css/jumbotron-narrow.css' %}" rel="stylesheet">
+<link href="{% static 'bootstrap/css/jumbotron.css' %}" rel="stylesheet">
     <style>
     .btn-toolbar .btn {
     margin-bottom: 25px;  }
